k8s/network-policies/backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-policy
  namespace: cloudcart

spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - auth-service
          - product-service
          - order-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudcart
