k8s/network-policies/databases.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: database-policy
  namespace: cloudcart

spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - postgres-auth
          - postgres-products
          - postgres-order

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudcart

      ports:
        - protocol: TCP
          port: 5432
